--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,8 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# Increase timeout for network operations
+systemProp.http.connectionTimeout=60000
+systemProp.http.socketTimeout=60000
+org.gradle.daemon.idletimeout=10800000
